# Wildcat-SLAM

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: google-test.cmake
launch/: run.launch
rviz/: default.rviz
scripts/: CubicBSpline3D.ipynb  SymforceGen.py
src/: wildcat_slam_node.cc
src/common/: common.h  histogram.cc  histogram.h  msg_conversion.cc  msg_conversion.h  rigid_transform.h  utils.h  utils_test.cc
src/io/: odometry_io.h
src/odometry/: continuous_time_trajectory.h  cost_functor.cc  cost_functor.h  feature_map.cc  feature_map.h  knn_surfel_matcher.cc  knn_surfel_matcher.h  knn_surfel_matcher_test.cc  lidar_odometry.cc  lidar_odometry.h  lio_config.h  local_parameterization_sample_state.h  spline_interpolation.h  spline_interpolation_test.cc  surfel.cc  surfel.h  surfel_extraction.cc  surfel_extraction.h  surfel_odometry.cc  surfel_odometry.h
src/sensor/: imu_resampler.h  imu_resampler_test.cc
